--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -436,6 +436,7 @@ section {
 ============================================ */
 .hero-section {
     margin-bottom: 80px;
+    filter: brightness(1.7);
 }
 
 .hero-image {
